[gd_scene load_steps=4 format=3 uid="uid://bmukbxm42112v"]

[ext_resource type="Script" path="res://scripts/persistence/persistence_menu.gd" id="1_re8o2"]
[ext_resource type="PackedScene" uid="uid://bcdby6svlp0fj" path="res://scenes/UI/backgrounds/fade_background.tscn" id="2_ifd12"]
[ext_resource type="Theme" uid="uid://d2b8574nrw82u" path="res://settings/persistence_menu_theme.tres" id="3_l1glr"]

[node name="PersistenceMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_re8o2")

[node name="FadeBackground" parent="." instance=ExtResource("2_ifd12")]

[node name="PersistenceMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_l1glr")

[node name="Grid" type="GridContainer" parent="PersistenceMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.265
anchor_top = 0.166
anchor_right = 0.733
anchor_bottom = 0.724
offset_left = -0.800018
offset_top = 2.71999
offset_right = 0.639893
offset_bottom = 0.0799561
grow_horizontal = 2
grow_vertical = 2

[node name="CancelButton" type="Button" parent="PersistenceMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.432
anchor_top = 0.741
anchor_right = 0.562
anchor_bottom = 0.806
offset_left = 0.559998
offset_top = -0.28009
offset_right = 0.959961
offset_bottom = -0.480042
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "CANCEL_BUTTON"

[node name="MenuLabel" type="Label" parent="PersistenceMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.265
anchor_top = 0.093
anchor_right = 0.729
anchor_bottom = 0.166
offset_left = -0.800018
offset_top = -0.440002
offset_right = 0.319946
offset_bottom = -0.280014
text = "SAVE_GAME_LABEL"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PersistenceMenu/CancelButton" to="." method="_on_cancel_button_pressed"]
